download and configure lexik JWT bundle

--- a/.env
+++ b/.env
@@ -1,17 +1,10 @@
 APP_ENV=~
 APP_SECRET=~
 
-###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
-###< doctrine/doctrine-bundle ###
+DATABASE_URL=~
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=98e71c717f053503a51cd9c50512292e
+JWT_SECRET_KEY=~
+JWT_PUBLIC_KEY=~
+JWT_PASSPHRASE=~
 ###< lexik/jwt-authentication-bundle ###
