--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        doc:
+            pattern: ^/api/doc
+            security: false
+            
         main:
             lazy: true
             provider: app_user_provider
@@ -34,6 +39,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS  }
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
