--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,10 @@ controllers:
 
 login_check:
     path: /login_check
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
+
