--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,8 +38,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login, roles: PUBLIC_ACCESS  }
         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS  }
+        - { path: ^/api/*, roles: ROLE_CLIENT  }
 
 when@test:
     security:
