change user repository requests

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,5 +40,8 @@ security:
     access_control:
         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS  }
-        - { path: ^/api/*, roles: ROLE_CLIENT  }
+        # - { path: ^/api/*, roles: ROLE_CLIENT  }
+
+    role_hierarchy:
+        ROLE_CLIENT: [ROLE_USER]
 
